--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-Add header to blog
+<!doctype html>
 <html lang="en">
 <head>
     <meta charset="utf-8">
@@ -9,10 +9,19 @@ Add header to blog
 </head>
 <body>
 
+    <header>
+      <hl>Adventure</hl>
+    </header>
+
+    <div class="container">
+      <main>
+
+      </main>
+    </div>
+
+    <footer>
+        Made with love @ Udacity
+    <footer>
     <script src="js/app.js"></script>
 </body>
 </html>
-
-<header>
-    <hl>Expedition</hl>
-</header>
