add aside content

--- a/index.html
+++ b/index.html
@@ -19,6 +19,14 @@
       </main>
     </div>
 
+<!-- start of new content -->
+<aside>
+    <h2>About Me</h2>
+
+    <p> I am new to GitHub and I am finding it confusing but, the more I make mistakes and learning to fix it the better I get to understand the process.</p>
+<aside>
+<!-- end of new content -->
+
     <footer>
         Made with love @ Udacity
     <footer>
