I like github.com

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <aside>
     <h2>About Me</h2>
 
-    <p> I am new to GitHub and I am finding it confusing but, the more I make mistakes and learning to fix it the better I get to understand the process.</p>
+    <p> I am new to GitHub and I am finding it confusing but, the more I make mistakes and learning to fix it the better I get understanding the process. I like github.com for tutoring.</p>
 <aside>
 <!-- end of new content -->
 
