add links to professional and fitness social media

--- a/index.html
+++ b/index.html
@@ -20,7 +20,17 @@
     </div>
 
     <footer>
-        Made with love @ Udacity
+        <!--start of new content-->
+        <section>
+            <h3 class="visuallyhidden">Social Links</h3>
+            <a class="social-link" href="https://www.linkedin.com/udacity/">
+                <img src="img/social-linkedin.png" alt="LinkedIn">
+            <a>
+            <a class="social-link" href="https://www.instagram.com/udacity/">
+                <img src="img/social-instagram.png" alt="Instagram">
+            <a>
+        <section>
+        <!--end of new content-->
     <footer>
     <script src="js/app.js"></script>
 </body>
